--- a/portal/html/USR-02-04-B-LIST.html
+++ b/portal/html/USR-02-04-B-LIST.html
@@ -395,7 +395,7 @@
                                     <li>
                                         <a href="javascript:void(0);">
                                             <dl>
-                                                <dt>선정배제기준&현장점검</dt>
+                                                <dt>선정배제기준&현장점검<span class="sub_faq">투자확인서FAQ</span></dt>
                                                 <dd>벤처투자마트 신청 후 Track 분류기간은 얼마나 소요되나요?</dd>
                                             </dl>
                                         </a>
