--- a/portal/html/USR-1020-F-LIST.html
+++ b/portal/html/USR-1020-F-LIST.html
@@ -543,11 +543,11 @@
 
                 </div>
 
-                <!-- 운용규모 -->
+                <!-- 투자사 운영규모 -->
                 <div class="search_item">
 
                     <div class="tit_box">
-                        <h4><span></span>운용규모</h4>
+                        <h4><span></span>투자사 운영규모</h4>
                     </div>
 
                     <ul class="chk_list type_03">
