--- a/portal/html/USR-1051-H-CONTN.html
+++ b/portal/html/USR-1051-H-CONTN.html
@@ -393,6 +393,15 @@
                                 </ul>
                             </dd>
                         </dl>
+
+                        <dl>
+                            <dt><strong>문의처</strong></dt>
+                            <dd>
+                                <ul>
+                                    <li>한국벤처캐피탈협회 정유정 연구원(02-2156-2135)</li>
+                                </ul>
+                            </dd>
+                        </dl>
                     </div>
 
                     <!-- bg 추가 -->
@@ -431,6 +440,15 @@
                             <dt><strong>사업안내</strong></dt>
                             <dd>
                                 <div class="img"><img src="../images/content/img_venture_investment_mart_02.png" alt="사업안내 이미지"></div>
+                            </dd>
+                        </dl>
+                        <dl>
+                            <dt><strong>문의처</strong></dt>
+                            <dd>
+                                <ul>
+                                    <li>한국엔젤투자협회 송윤성 연구원(02-3440-7402)</li>
+                                    <li>한국엔젤투자협회 양정아 대리(02-3440-7440)</li>
+                                </ul>
                             </dd>
                         </dl>
                     </div>
