--- a/portal/html/USR-1061-H-CONTN.html
+++ b/portal/html/USR-1061-H-CONTN.html
@@ -347,14 +347,14 @@
                     <div class="content_list_box">
                         <div class="list_item">
                             <div class="tit_box">
-                                <h4><span></span>신청안내</h4>
+                                <h4><span></span>구주유통망 소개</h4>
                             </div>
                             <dl>
                                 <dt><span>VC 구주유통망은 벤처투자자산 매매거래를 위한 플랫폼입니다.</span></dt>
                                 <dd>
                                     <ul>
-                                        <li>공개매각 절차를 통한 거래의 공정성 확보 및 청산기간 단축</li>
-                                        <li>창투사 전자보고시스템과 데이터 연동으로 벤처캐피탈의 업무</li>
+                                        <li>공개매각 절차를 통한 거래의 공정성 확보와 청산기간을 단축할 수 있습니다.</li>
+                                        <li>등록된 매물정보를 검색하여 회원간 자율적으로 거래하는 방식입니다.</li>
                                     </ul>
                                 </dd>
                             </dl>
