--- a/portal/html/USR-1310-H-CONTN.html
+++ b/portal/html/USR-1310-H-CONTN.html
@@ -347,7 +347,7 @@
                         <div class="tit_box">
                             <h4><span></span>벤처투자포털소개</h4>
                         </div>
-                        <dl>
+                        <!-- <dl>
                             <dt><strong>추진 배경</strong></dt>
                             <dd>
                                 <ul>
@@ -364,6 +364,17 @@
                                     <li>기존 분산 운용 중인 벤처투자 관련 시스템의 접근 채널 일원화</li>
                                     <li>대국민, 벤처투자 이해 관계자 등을 대상으로 한 정보제공 기능 구현</li>
                                     <li>정보자원 운용 가용성 및 확장성 강화를 위한 클라우드 도입</li>
+                                </ul>
+                            </dd>
+                        </dl> -->
+                        <dl>
+                            <dt><strong>포털 소개</strong></dt>
+                            <dd>
+                                <ul>
+                                    <li>벤처생태계 구성원 모두가 한 곳에서 정보를 취득하고 관련 서비스 이용이 편리해 지도록 벤처투자 관련 시스템 등의 벤처투자 관련 자원을 통합·연계한 종합포털 서비스입니다.</li>
+                                    <li>중소벤처기업부, 한국벤처투자, 한국벤처캐피탈협회, 한국엔젤투자협회, 창업진흥원, 한국액셀러레이터 협회 등 벤처투자와 관련된 공지사항, 통계, 웹진, 기타 자료를 볼 수 있도록 구성했습니다.</li>
+                                    <li>대국민, 벤처투자자, 투자유치희망기업 대상별로 벤처투자종합포털 맞춤 메뉴를 구성하여 서비스를 받아볼 수 있습니다.</li>
+                                    <li>커뮤니티, 벤처투자Talk 등을 통한 소통창구를 활용하여 의견을 모으고 자료를 공유할 수 있습니다.</li>
                                 </ul>
                             </dd>
                         </dl>
