--- a/portal/html/USR-2009-F-FORM.html
+++ b/portal/html/USR-2009-F-FORM.html
@@ -366,6 +366,7 @@
                             <dt>기업회원</dt>
                             <dd>- 기업에 속한(사업자등록번호 보유) 고객</dd>
                             <dd>- 투자유치 희망기업 관리자, 기관 관리자</dd>
+                            <dd><span class="f_color_red">※ 기업회원 가입 시 투자유치 희망기업에 자동 등록됩니다</span></dd>
                         </dl>
                     </div>
                 </div>
