--- a/portal/html/main.html
+++ b/portal/html/main.html
@@ -427,7 +427,7 @@
                                             <div class="swiper-slide">
                                                 <a href="">
                                                     <span></span>
-                                                    <strong>벤처투자 불법신고</strong>
+                                                    <strong>통합공시</strong>
                                                 </a>
                                             </div>
                                             <div class="swiper-slide">
