--- a/pub_list.html
+++ b/pub_list.html
@@ -271,7 +271,7 @@
                     date:'2022-09-16',
                     mdate:'2022-09-22',
                     con:'완료',
-                    etc:'1027 텍스트 및 class수정 <br/>(12/21) list_item에 bg클래스 추가'
+                    etc:'1027 텍스트 및 class수정 <br/>(12/21) list_item에 bg클래스 추가<br/>20230130 문의처 추가'
                 },
                 {
                     division: '',
@@ -406,7 +406,7 @@
                     date:'2022-09-26',
                     mdate:'2022-10-05',
                     con:'완료',
-                    etc:'20230113 문의처 수정'
+                    etc:'20230113 문의처 수정<br/>20230130 신청안내 수정'
                 },
                 {
                     division: '',
@@ -719,7 +719,7 @@
                     date:'2022-10-04',
                     mdate:'2022-11-08',
                     con:'완료',
-                    etc:'(11/21)BI다운로드 파일정리'
+                    etc:'(11/21)BI다운로드 파일정리<br/>20230130 내용 텍스트 수정'
                 },
                 {
                     division: '',
@@ -919,7 +919,7 @@
                     date:'2022-09-05',
                     mdate:'2022-11-10',
                     con:'완료',
-                    etc:''
+                    etc:'20230130 기업회원 문구 추가'
                 },
                 {
                     division: '',
