수정사항 업데이트

--- a/portal/html/USR-1334-F-DASH.html
+++ b/portal/html/USR-1334-F-DASH.html
@@ -1768,7 +1768,7 @@
                                         </div>
 
                                         <!-- 게시판 테이블 -->
-                                        <div class="tbl_longcard type_chk">
+                                        <div class="tbl_longcard type_chk another">
                                             <ul>
                                                 <li>
                                                     <div class="chk">
@@ -2034,7 +2034,7 @@
                                         </div>
 
                                         <!-- 게시판 테이블 -->
-                                        <div class="tbl_longcard type_chk">
+                                        <div class="tbl_longcard type_chk another">
                                             <ul>
                                                 <li>
                                                     <div class="chk">
@@ -2307,7 +2307,7 @@
                                         </div>
 
                                         <!-- 게시판 테이블 -->
-                                        <div class="tbl_longcard type_chk">
+                                        <div class="tbl_longcard type_chk another">
                                             <ul>
                                                 <li>
                                                     <div class="chk">
