--- a/portal/html/USR-1020-F-DTL.html
+++ b/portal/html/USR-1020-F-DTL.html
@@ -424,39 +424,44 @@
                                     <strong>공시현황</strong>
                                     <div class="btn_box_group">
                                         <div class="btn_box">
-                                            <a href="">공시 더보기</a>
+                                            <a href="">중소기업창업투자회사 전자공시 바로가기</a>
                                         </div>
                                         <div class="btn_box">
-                                            <a href="">공시 더보기</a>
+                                            <a href="">창업기획자 전자공시 바로가기</a>
                                         </div>
                                     </div>
                                 </div>
                                 <ul>
                                     <li>
+                                        <span class="investment_tit">중소기업창업투자회사 전자공시</span>
                                         <a href="">
                                             <strong>2021 정기공시</strong>
                                             <span>2022-04-11</span>
                                         </a>
                                     </li>
                                     <li>
+                                        <span class="investment_tit">창업기획자 전자공시</span>
                                         <a href="">
                                             <strong>자율공시 신규조합 결성</strong>
                                             <span>2022-04-11</span>
                                         </a>
                                     </li>
                                     <li>
+                                        <span class="investment_tit">중소기업창업투자회사 전자공시</span>
                                         <a href="">
                                             <strong>2022 수시공시</strong>
                                             <span>2022-04-11</span>
                                         </a>
                                     </li>
                                     <li>
+                                        <span class="investment_tit">창업기획자 전자공시</span>
                                         <a href="">
                                             <strong>2021 정기공시</strong>
                                             <span>2022-04-11</span>
                                         </a>
                                     </li>
                                     <li>
+                                        <span class="investment_tit">중소기업창업투자회사 전자공시</span>
                                         <a href="">
                                             <strong>2021 정기공시</strong>
                                             <span>2022-04-11</span>
