--- a/pub_list.html
+++ b/pub_list.html
@@ -189,7 +189,7 @@
                     date:'2022-08-25',
                     mdate:'2022-09-05',
                     con:'완료',
-                    etc:'(11/30) 펀드/조합보기 a태그 제거 및 class추가<br/>(12/01) 검색조건 이름 추가 -> search_form_box 밑에 search_word 추가<br/>(12/21) 데이터없음 li 추가<br/>(12/21) 초기화버튼 추가'
+                    etc:'(11/30) 펀드/조합보기 a태그 제거 및 class추가<br/>(12/01) 검색조건 이름 추가 -> search_form_box 밑에 search_word 추가<br/>(12/21) 데이터없음 li 추가<br/>(12/21) 초기화버튼 추가<br/>20230131 전자공시 타이틀 추가'
                 },
                 {
                     division: '',
@@ -489,7 +489,7 @@
                     date:'2022-09-28',
                     mdate:'2022-10-06',
                     con:'완료',
-                    etc:'(12/22) 내용수정'
+                    etc:'(12/22) 내용수정<br/>20230131 내용수정'
                 },
                 {
                     division: '',
