--- a/portal/html/main.html
+++ b/portal/html/main.html
@@ -286,6 +286,15 @@
     </header>
     <div class="header_bg"></div>
 
+    <!-- sns -->
+    <aside class="quick_box sns">
+        <ul>
+            <li class="ico_blog"><a href="https://blog.naver.com/vcs_official" target="_blank" title="네이버 블로그 바로가기"></a></li>
+            <li class="ico_facebook"><a href="https://www.facebook.com/vcs.kvca" target="_blank" title="페이스북 바로가기"></a></li>
+            <li class="ico_instar"><a href="https://www.instagram.com/vcs_kvca/" target="_blank" title="인스타그램 바로가기"></a></li>
+        </ul>
+    </aside>
+
     <!-- quick menu -->
     <aside class="quick_box">
         <ul>
