상단팝업 추가

--- a/portal/html/USR-02-02-F-LIST.html
+++ b/portal/html/USR-02-02-F-LIST.html
@@ -26,7 +26,7 @@
     <link rel="icon" href="../images/favicon.ico">
 
 </head>
-<body>
+<body class="top_p_open">
 <div class="wrap">
     <!-- skip nav -->
     <div class="skip_nav" title="스킵 네비게이션">
@@ -34,6 +34,28 @@
             <li><a href="#nav" title="메뉴 바로가기">메뉴 바로가기</a></li>
             <li><a href="#container" title="본문 바로가기">본문 바로가기</a></li>
         </ul>
+    </div>
+
+    <!-- 상단팝업 -->
+    <div class="top_pop_box">
+        <div class="pop_content">
+            <span class="ico_notice"></span>
+            <a href="" class="tit">
+                <strong>[제목]</strong>
+                <span>내용내용내용내용내용내용내용내용내용내용내용</span>
+            </a>
+        </div>
+        <div class="pop_chk">
+            <div class="chk_box">
+                <span>
+                    <input type="checkbox" id="chk_pop">
+                    <label for="chk_pop">오늘 하루 안보기</label>
+                </span>
+            </div>
+            <div class="close">
+                <button><span>닫기</span></button>
+            </div>
+        </div>
     </div>
 
     <!-- header -->
