--- a/pub_list.html
+++ b/pub_list.html
@@ -1479,6 +1479,24 @@
                     con:'완료',
                     etc:''
                 },
+                {
+                    division: '',
+                    depth1:'관리자 통계화면 - 통합통계',
+                    path:'./cms/index55.html',
+                    date:'2023-02-07',
+                    mdate:'',
+                    con:'완료',
+                    etc:''
+                },
+                {
+                    division: '',
+                    depth1:'관리자 통계화면 - 분류별통계',
+                    path:'./cms/index56.html',
+                    date:'2023-02-07',
+                    mdate:'',
+                    con:'완료',
+                    etc:''
+                },
             ];
         
 
